# tui

./: .gitignore  AGENTS.md  AGENT_ARCHITECTURE.md  CLAUDE.md  Cargo.toml  ELEVENLABS_API_RESEARCH.md  ELEVENLABS_IMPLEMENTATION_EXAMPLES.md  ELEVENLABS_QUICK_START.md  ELEVENLABS_RESEARCH_INDEX.md  ELEVENLABS_RESEARCH_SOURCES.md  IMPLEMENTATION_SUMMARY.md  PROFILING_ANALYSIS.md  README.md  README_ELEVENLABS_RESEARCH.md  RESEARCH_COMPLETION_SUMMARY.txt  TUI_MODERNIZATION_TRACKER.md  a.jsonl  chat-input-ux-demo.html  debug_metadata.sh  debug_view_mockup.html  ios-conversation-mockup.html  rep.jsonl  search-mockup.html
.tenex/: mcp.json
Plans/: ok-so-the-backend-clever-pebble.md
crates/: AGENTS.md
crates/tenex-cli/: Cargo.toml
crates/tenex-cli/src/: lib.rs  main.rs
crates/tenex-cli/src/cli/: client.rs  config.rs  daemon.rs  http.rs  mod.rs  protocol.rs  roster.rs
crates/tenex-core/: AGENTS.md  Cargo.toml
crates/tenex-core/examples/: probe_profile.rs
crates/tenex-core/src/: agent_display.rs  config.rs  constants.rs  events.rs  ffi.rs  lib.rs  runtime.rs  search.rs  secure_storage.rs  slug.rs  stats.rs  tracing_setup.rs
crates/tenex-core/src/ai/: audio_notifications.rs  elevenlabs.rs  mod.rs  openrouter.rs
crates/tenex-core/src/ffi/: agents_api.rs  audio_settings_api.rs  auth_api.rs  bunker_api.rs  callback_api.rs  data_api.rs  diagnostics_api.rs  internal_impl.rs  lifecycle_api.rs  messaging_api.rs  mod.rs  projects_api.rs  refresh_api.rs  standalone_audio_api.rs  stats_api.rs  trust_api.rs  ui_state_api.rs  workspaces_api.rs
crates/tenex-core/src/models/: agent_config.rs  agent_definition.rs  ask_input.rs  bookmark.rs  conversation_metadata.rs  draft.rs  html_report.rs  inbox.rs  installed_agent.rs  lesson.rs  mcp_tool.rs  message.rs  mod.rs  nudge.rs  operations_status.rs  project.rs  project_draft.rs  project_status.rs  report.rs  skill.rs  tag_utils.rs  team_pack.rs  thread.rs  time_filter.rs
crates/tenex-core/src/nostr/: auth.rs  blossom.rs  bunker.rs  mod.rs  worker.rs
crates/tenex-core/src/store/: agent_tracking.rs  app_data_store.rs  content_store.rs  db.rs  events.rs  inbox_store.rs  mod.rs  operations_store.rs  reports_store.rs  roster.rs  runtime_hierarchy.rs  state_cache.rs  statistics_store.rs  trust_store.rs  views.rs
crates/tenex-core/src/streaming/: mod.rs  socket_client.rs  types.rs
crates/tenex-core/tests/: agent_config_source_of_truth.rs  agent_identity.rs  repro_testflight_disappears.rs
crates/tenex-core/tests/fixtures/: real_status_event_128_tools.json
crates/tenex-repl/: Cargo.toml
crates/tenex-repl/src/: commands.rs  completion.rs  editor.rs  format.rs  history.rs  main.rs  markdown.rs  panels.rs  render.rs  roster.rs  state.rs  util.rs
crates/tenex-telegram-gateway/: Cargo.toml
crates/tenex-telegram-gateway/src/: cli.rs  config.rs  gateway.rs  main.rs  ngrok.rs  state.rs  telegram.rs  tenex.rs
crates/tenex-tui/: Cargo.toml
crates/tenex-tui/src/: clipboard.rs  input.rs  jaeger.rs  lib.rs  main.rs  render.rs  runtime.rs  server.rs
crates/tenex-tui/src/input/: commands.rs  editor_handlers.rs  input_prefix.rs  mod.rs  modal_handlers.rs  palette.rs  view_handlers.rs
crates/tenex-tui/src/input/modal_handlers/: actions.rs  agent.rs  ask.rs  attachments.rs  backend.rs  bunker.rs  command_palette.rs  drafts.rs  helpers.rs  mod.rs  nudge.rs  search.rs  selectors.rs  view.rs  workspace.rs
crates/tenex-tui/src/ui/: app.rs  ask_input.rs  audio_player.rs  avatars.rs  card.rs  format.rs  hotkeys.rs  layout.rs  markdown.rs  mod.rs  modal.rs  notifications.rs  roster.rs  search.rs  selector.rs  state.rs  terminal.rs  text_editor.rs  theme.rs  todo.rs  tool_calls.rs
crates/tenex-tui/src/ui/components/: chat_sidebar.rs  mod.rs  modal_frame.rs  statusbar.rs  tab_bar.rs  todo_sidebar.rs
crates/tenex-tui/src/ui/nudge/: form_state.rs  mod.rs  tool_permissions.rs  validation.rs
crates/tenex-tui/src/ui/nudge/views/: create_form.rs  delete_confirm.rs  detail_view.rs  edit_form.rs  list_view.rs  mod.rs
crates/tenex-tui/src/ui/services/: animation_clock.rs  drafts.rs  mod.rs  notification_manager.rs
crates/tenex-tui/src/ui/views/: agent_browser.rs  app_settings.rs  ask_modal.rs  bunker.rs  chat.rs  command_palette.rs  create_agent.rs  create_project.rs  debug_stats.rs  draft_navigator.rs  history_search.rs  home.rs  home_helpers.rs  inline_ask.rs  lesson_viewer.rs  login.rs  mod.rs  nudge_crud.rs  nudge_selector.rs  nudge_skill_selector.rs  project_dialog.rs  project_settings.rs  report_tab.rs  report_viewer.rs  reports.rs  skill_selector.rs  stats.rs  tts_control.rs  workspace_modal.rs
crates/tenex-tui/src/ui/views/chat/: actions.rs  cards.rs  grouping.rs  input.rs  layout.rs  messages.rs
crates/tenex-tui/src/ui/views/home/: content.rs  mod.rs  modals.rs  sidebar.rs
docs/: 2026-05-07-inconsistency-audit-findings.md  OPENAI_API_SERVER.md  TODO_UI_MOCKUPS.md  UI_STYLE_GUIDELINES.md  agent-identity-config-implementation-decisions.md  delegation-tree-recipient-chain-mock.html  elevenlabs_integration.md  home-view-mock.html  technical-debt-mixup-worksheet.md  testflight-github-actions.md  voice-pipeline.md
examples/: curl_examples.sh  elevenlabs_integration.md  openai_client.py
ios-app/: .gitignore  .package.resolved  AGENTS.md  ExportOptions.plist  PERFORMANCE_ANALYSIS.md  Project.swift  TenexMVP.entitlements
mockups/: chat-v1-compact.html  chat-v2-bubble.html  chat-v3-minimal.html  chat-v4-stream.html  home-v1-grouped.html  home-v2-compact.html  home-v3-cards.html  index.html  tabs-few.html  tabs-interactive.html  tabs-many.html
scripts/: check-loc-guidance.sh  check-ui-style.sh  generate-swift-bindings.sh  setup-hooks.sh  test_socket_path_bug.sh
src/: lib.rs  main.rs  tracing_setup.rs
swift-bindings/: AGENTS.md  tenex_core.swift  tenex_coreFFI.h
wireframes/: accent-indicators-bars.html  achievement-badges.html  binary-threshold.html  chat-redesign.html  cost-intensity-bars.html  dual-zone-coloring.html  goal-line-overage.html  ios-conversation-detail.html  ios-diagnostics-wireframe.html  model-dominance-bars.html  (+9 more)
(+2675 files in other folders)
