[package]
name = "tenex-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Nostr
nostr-sdk = { version = "0.38", features = ["nip49"] }

# Database
nostrdb = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }  # Only for credentials storage

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Markdown
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"
