[workspace]
resolver = "2"
members = [
  "crates/tenex-core",
  "crates/tenex-tui",
  "crates/tenex-cli",
  "crates/tenex-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
nostr-sdk = { version = "0.38", features = ["nip49"] }
nostrdb = { git = "https://github.com/pablof7z/nostrdb-rs", rev = "db03aa58ecd58d5897799f022160bfba055b0309" }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
pulldown-cmark = "0.12"
arboard = "3"
png = "0.17"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tempfile = "3"
eframe = "0.29"
image = "0.25"
ratatui-image = "4"
