[workspace]
resolver = "2"
members = [
  "crates/tenex-core",
  "crates/tenex-tui",
  "crates/tenex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
# Use git versions to ensure all nostr crates have matching types
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", features = ["nip49"] }
nostr-ndb = { git = "https://github.com/rust-nostr/nostr" }
nostrdb = { git = "https://github.com/pablof7z/nostrdb-rs", branch = "master" }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
pulldown-cmark = "0.12"
arboard = "3"
png = "0.17"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tempfile = "3"
image = "0.25"
ratatui-image = "4"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
uniffi = "0.29"
chrono = "0.4"
tracing = "0.1"

# Patch nostr-ndb's nostrdb dependency to use our fork
[patch.crates-io]
nostrdb = { git = "https://github.com/pablof7z/nostrdb-rs", branch = "master" }
