[package]
name = "tenex-core"
version.workspace = true
edition.workspace = true

[lib]
name = "tenex_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
nostr-sdk.workspace = true
nostrdb.workspace = true
rusqlite.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
