[package]
name = "tenex-core"
version.workspace = true
edition.workspace = true

[lib]
name = "tenex_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
nostr-sdk.workspace = true
nostrdb.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
futures.workspace = true
libc.workspace = true
uuid.workspace = true
dirs.workspace = true
parking_lot.workspace = true
tracing.workspace = true
uniffi = { workspace = true, features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dev-dependencies]
tempfile.workspace = true
