[package]
name = "tenex-core"
version.workspace = true
edition.workspace = true

[lib]
name = "tenex_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
nostr-sdk.workspace = true
nostr-ndb.workspace = true
nostrdb.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
futures.workspace = true
libc.workspace = true
uuid.workspace = true
dirs.workspace = true
parking_lot.workspace = true
tracing.workspace = true
uniffi = { workspace = true, features = ["cli"] }
keyring.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[[bin]]
name = "test_negentropy"
path = "src/bin/test_negentropy.rs"

[[bin]]
name = "test_notifications"
path = "src/bin/test_notifications.rs"

[[bin]]
name = "quick_notification_test"
path = "src/bin/quick_notification_test.rs"

[[bin]]
name = "test_negentropy_flood"
path = "src/bin/test_negentropy_flood.rs"

[[bin]]
name = "diagnose_negentropy"
path = "src/bin/diagnose_negentropy.rs"

[dev-dependencies]
tempfile.workspace = true
