[package]
name = "tenex-telegram-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tenex-telegram-gateway"
path = "src/main.rs"

[dependencies]
tenex-core = { path = "../tenex-core" }
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
nostr-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
axum = "0.7"
