[package]
name = "tenex-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tenex-tui"
path = "src/main.rs"

[dependencies]
tenex-core = { path = "../tenex-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
nostr-sdk.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
arboard.workspace = true
png.workspace = true
clap.workspace = true
unicode-width = "0.2"
unicode-segmentation = "1.10"
chrono.workspace = true
